--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-<body id="comments">
+<body>
     <header class="header">
         <nav class="header__nav container">
             <div class="logo">
