--- a/src/post.html
+++ b/src/post.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-<body id="comments">
+<body>
     <header class="header">
         <nav class="header__nav container">
             <div class="logo">
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </section>
-        <div class="comments container container--box">
+        <div class="comments container container--box" id="comments">
             <span class="comments__counter gold-text">2 comments</span>
             <div class="comment">
                 <div class="comment__img-inner">
